fixed mobile clipping, sponsor
Fixed section containers clipping outside the screen on the left side.

Fixed sponsors image being responsive.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,7 +19,6 @@ html {
 }
 
 .container {
-  padding-left: 0;
 }
 
 #intro {
@@ -464,6 +463,11 @@ h2 {
   padding: 10px;
   padding-top: 0;
   max-width: 33%;
+}
+.sponsor img {
+  width: 100%;
+  max-width: 300px;
+  height: 100%;
 }
 
 #footer {
